# STS

./: .gitignore  PRD.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: admin_custom_block_reviews.py  admin_forum.py  auth.py  backtests.py  custom_blocks.py  dependencies.py  files.py  forum.py  health.py  market_data.py  market_rules.py  shared_blocks.py  simulation_accounts.py  strategies.py
backend/app/core/: config.py  schema_migrations.py  security.py
backend/app/models/: __init__.py  backtest.py  custom_block.py  forum.py  market_data.py  shared_block.py  simulation_account.py  strategy.py  uploaded_file.py  user.py
backend/app/schemas/: auth.py  backtest.py  custom_block.py  forum.py  market_data.py  market_rule.py  shared_block.py  simulation_account.py  strategy.py  uploaded_file.py
backend/app/services/: auth_service.py  backtest_record_service.py  backtest_report_service.py  backtest_service.py  custom_block_service.py  file_service.py  forum_service.py  market_data_download_service.py  market_data_service.py  market_execution_rule_service.py  market_rule_service.py  (+5 more)
backend/tests/: conftest.py  test_auth.py  test_backtest_engine.py  test_backtests.py  test_config.py  test_current_user.py  test_custom_blocks.py  test_files.py  test_forum.py  test_health.py  test_market_data_downloads.py  test_market_data_provider.py  test_market_execution_rules.py  test_market_rules.py  test_security.py  test_shared_blocks.py  test_simulation_accounts.py  test_strategies.py  test_trading_calendar_service.py
(+62 files in other folders)
