[project]
name = "sts-backend"
version = "0.1.0"
description = "Simulated Trading System backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.2.1",
  "pymysql>=1.1.0",
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "email-validator>=2.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
